# OCR

./: .gitignore  capture_ocr.py  config_manager.py  fastapi_server.py  fastapi_server.spec  patch.py  patch.spec  pyproject.toml  專案規格書.md
