[tool.poetry]
name = "ocr"
version = "0.1.0"
description = "OCR camera capture tool"
authors = ["willes.chen <2willes.0103@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
easyocr = ">=1.7"
opencv-python = ">=4.8.0,<5.0"
numpy = ">=1.23,<2.0"
pillow = ">=10.0"
paddleocr = ">=2.7"
paddlepaddle = ">=2.6"
transformers = ">=4.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
