[tool.poetry]
name = "ocr-fastapi-server"
version = "1.0.0"
description = "OCR API Server with EasyOCR, TrOCR, and PaddleOCR"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "*"
uvicorn = "*"
opencv-python = "*"
numpy = "*"
Pillow = "*"
torch = {version = ">=2.0,<3.0", source = "pytorch-cpu"}
torchvision = {version = ">=0.15,<1.0", source = "pytorch-cpu"}
easyocr = "*"
transformers = ">=4.30,<5.0"
paddleocr = "*"
paddlepaddle = "*"

[tool.poetry.group.build.dependencies]
pyinstaller = ">=6.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
